--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Dark theme compatible with API 19 -->
-    <style name="Theme.Kitkat" parent="Theme.AppCompat">
+    <!-- Force light theme even in dark mode -->
+    <style name="Theme.Kitkat" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
+        <item name="colorPrimary">@color/maroon</item>
+        <item name="colorPrimaryDark">@color/maroon</item>
         <item name="colorAccent">@color/teal_200</item>
     </style>
 </resources>
